--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <!-- Your image here -->
         <img src="static/images/effect_of_generalization.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          Effect of generalization on the performance of the proposed method (lower NSE penalty correcponds to better performance).
+          Effect of generalization on the performance of the proposed method (lower NSE penalty corresponds to better mitigation).
         </h2>
       </div>
       <div class="item">
