--- a/index.html
+++ b/index.html
@@ -182,40 +182,44 @@
     </div>
   </div>
 
-
-
-<!-- Image carousel -->
+  <!-- Image Section with Images Displayed Vertically -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Simulation Results</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/domains.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
+      <h2 class="title is-3 has-text-centered">Experiments in Simulation</h2>
+
+      <h3 class="subtitle has-text-centered">
+        Experiments in simulation are conducted using thing three domains in simulation.
+      </h3>
+      <!-- First image with caption -->
+      <div class="content">
+        <h3 class="subtitle has-text-centered">
           Domains used for simulation experiments.
-        </h2>
+        </h3>
+        <img src="static/images/domains.png" alt="MY ALT TEXT" style="width: 100%; border-radius: 10px;"/>
       </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/effect_of_generalization.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Effect of generalization on the performance of the proposed method (lower NSE penalty corresponds to better mitigation).
-        </h2>
+
+      <!-- Second image with caption -->
+      <div class="content">
+        <h3 class="subtitle has-text-centered">
+          Effect of generalization.
+        </h3>
+        <img src="static/images/effect_of_generalization.png" alt="MY ALT TEXT" style="width: 100%; border-radius: 10px;"/>
+        
       </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/scalability.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
+
+      <!-- Third image with caption -->
+      <div class="content">
+        <h3 class="subtitle has-text-centered">
           Approximately linear scalability trend with increasing number of agents.
-       </h2>
-     </div>
+        </h3>
+        <img src="static/images/scalability.png" alt="MY ALT TEXT" style="width: 100%; border-radius: 10px;"/>
+      </div>
+
+    </div>
   </div>
-</div>
-</div>
 </section>
-<!-- End image carousel -->
+
 
 
 
