changed teaser video

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/problem_setup.mov"
+        <source src="static/videos/problem_setup.mp4"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
@@ -188,13 +188,13 @@
     <div class="container">
       <h2 class="title is-3 has-text-centered">Experiments in Simulation</h2>
 
-      <h3 class="subtitle has-text-centered">
-        Experiments in simulation are conducted using thing three domains in simulation.
-      </h3>
+      <!-- <h3 class="subtitle has-text-centered">
+        Experiments in simulation are conducted using thing three domains.
+      </h3> -->
       <!-- First image with caption -->
       <div class="content">
         <h3 class="subtitle has-text-centered">
-          Domains used for simulation experiments.
+          <u>Domains used for simulation experiments</u>
         </h3>
         <img src="static/images/domains.png" alt="MY ALT TEXT" style="width: 100%; border-radius: 10px;"/>
       </div>
@@ -202,7 +202,7 @@
       <!-- Second image with caption -->
       <div class="content">
         <h3 class="subtitle has-text-centered">
-          Effect of generalization.
+          <u>Effect of generalization on NSE mitigation</u>
         </h3>
         <img src="static/images/effect_of_generalization.png" alt="MY ALT TEXT" style="width: 100%; border-radius: 10px;"/>
         
@@ -211,7 +211,7 @@
       <!-- Third image with caption -->
       <div class="content">
         <h3 class="subtitle has-text-centered">
-          Approximately linear scalability trend with increasing number of agents.
+          <u>Scalability</u>
         </h3>
         <img src="static/images/scalability.png" alt="MY ALT TEXT" style="width: 100%; border-radius: 10px;"/>
       </div>
