--- a/index.html
+++ b/index.html
@@ -182,6 +182,20 @@
     </div>
   </div>
 
+<!-- Youtube video -->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/blame_assignment.mp4"
+        type="video/mp4">
+      </video>
+    </div>
+  </div>
+</section>
+<!-- End youtube video -->
+
   <!-- Image Section with Images Displayed Vertically -->
 <section class="hero is-small">
   <div class="hero-body">
@@ -223,24 +237,6 @@
 
 
 
-
-<!-- Youtube video -->
-<!-- <section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Experiments with Mobile Robots</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <iframe src="static/videos/icra_vid.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-<!-- End youtube video -->
 
 
 <section class="section">
